[gd_scene load_steps=13 format=3 uid="uid://bhrayw7apipmt"]

[ext_resource type="Script" uid="uid://cgse05rxq3mu3" path="res://addons/nascentsoul/core/zone/zone.gd" id="1_03k34"]
[ext_resource type="Script" uid="uid://g1e7lg4j6ddq" path="res://scenes/demo_scene.gd" id="1_6054u"]
[ext_resource type="Resource" uid="uid://dp6oji2xjys0" path="res://resources/Permission_DenyDrop.tres" id="2_bk2b3"]
[ext_resource type="Resource" uid="uid://bwe8hfhx3fb0f" path="res://resources/Display_CardsFaceDown.tres" id="3_64dih"]
[ext_resource type="Resource" uid="uid://csjopkwtt1nnm" path="res://resources/Deck_PileLayout.tres" id="4_blhf0"]
[ext_resource type="Resource" uid="uid://d0pvu7i0e28nk" path="res://resources/Permission_AllowAny.tres" id="6_64dih"]
[ext_resource type="Resource" uid="uid://bxt2yet6087br" path="res://resources/Display_CardsFaceUp.tres" id="7_oflti"]
[ext_resource type="Resource" uid="uid://xsxggs487qfr" path="res://resources/Hand_ArcLayout.tres" id="9_6054u"]
[ext_resource type="Script" uid="uid://blmirpr7b2dtc" path="res://addons/nascentsoul/core/interaction/zone_interaction.gd" id="10_5q064"]

[sub_resource type="Resource" id="Resource_6054u"]
script = ExtResource("10_5q064")
enable_click = false
enable_double_click = false
enable_drag = false
enable_hover_events = false
enable_multi_select = false
metadata/_custom_type_script = "uid://blmirpr7b2dtc"

[sub_resource type="Resource" id="Resource_5q064"]
script = ExtResource("10_5q064")
metadata/_custom_type_script = "uid://blmirpr7b2dtc"

[sub_resource type="Resource" id="Resource_nvxfb"]
script = ExtResource("10_5q064")
enable_hover_events = false
metadata/_custom_type_script = "uid://blmirpr7b2dtc"

[node name="DemoScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6054u")

[node name="Table" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="DeckContainer" type="ColorRect" parent="Table"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -120.0
offset_bottom = 150.0
grow_horizontal = 0
color = Color(0.11921059, 0.45206267, 0.33988306, 1)

[node name="DeckZone" type="Node" parent="Table/DeckContainer" node_paths=PackedStringArray("container")]
script = ExtResource("1_03k34")
container = NodePath("..")
permission_logic = ExtResource("2_bk2b3")
display_logic = ExtResource("3_64dih")
layout_logic = ExtResource("4_blhf0")
interaction_logic = SubResource("Resource_6054u")
metadata/_custom_type_script = "uid://cgse05rxq3mu3"

[node name="HandContainer" type="ColorRect" parent="Table"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -250.0
offset_top = -150.0
offset_right = 250.0
grow_horizontal = 2
grow_vertical = 0
color = Color(0.11921059, 0.45206267, 0.33988306, 1)

[node name="HandZone" type="Node" parent="Table/HandContainer" node_paths=PackedStringArray("container")]
script = ExtResource("1_03k34")
container = NodePath("..")
permission_logic = ExtResource("6_64dih")
display_logic = ExtResource("7_oflti")
layout_logic = ExtResource("9_6054u")
interaction_logic = SubResource("Resource_5q064")
metadata/_custom_type_script = "uid://cgse05rxq3mu3"

[node name="DiscardContainer" type="ColorRect" parent="Table"]
layout_mode = 1
offset_right = 120.0
offset_bottom = 150.0
color = Color(0.11921059, 0.45206267, 0.33988306, 1)

[node name="DiscardZone" type="Node" parent="Table/DiscardContainer" node_paths=PackedStringArray("container")]
script = ExtResource("1_03k34")
container = NodePath("..")
permission_logic = ExtResource("6_64dih")
display_logic = ExtResource("7_oflti")
layout_logic = ExtResource("4_blhf0")
interaction_logic = SubResource("Resource_nvxfb")
metadata/_custom_type_script = "uid://cgse05rxq3mu3"

[node name="UI" type="CanvasLayer" parent="."]

[node name="DrawButton" type="Button" parent="UI"]
offset_left = 462.0
offset_top = 421.0
offset_right = 552.0
offset_bottom = 452.0
text = "Draw Card"

[node name="DiscardButton" type="Button" parent="UI"]
offset_left = 699.0
offset_top = 422.0
offset_right = 806.0
offset_bottom = 453.0
text = "Discard Card"

[connection signal="item_dropped" from="Table/HandContainer/HandZone" to="." method="_on_hand_zone_item_dropped"]
[connection signal="pressed" from="UI/DrawButton" to="." method="_on_draw_button_pressed"]
[connection signal="pressed" from="UI/DiscardButton" to="." method="_on_discard_button_pressed"]
